# latex-scripts

./: BUILD.bazel  CHANGELOG.md  Makefile  WORKSPACE  assignment.cls  beamercolorthemedepaul.sty  beamerthemedepaul.sty  create_release.sh  sde-assignment_test.tex  sde-exam.cls  sde-exam_test.tex  sde-lecture.cls  sde-lecture_test.tex  sde-listings.sty  sde-quiz.cls  sde-quiz_test.tex  sde-syllabus.cls  sde-syllabus_test.tex  sengelha.sty  syllabus.cls
.chglog/: CHANGELOG.tpl.md  config.yml
protobuf/: lang.sty  style.sty
sde-assignment/: sde-assignment.cls
sde-exam/: sde-exam.cls
sde-lecture/: beamerthemedepaul.sty  sde-lecture.cls
sde-quiz/: sde-quiz.cls
